# cinema

./: .gitignore  README.md  config  makefile  pyproject.toml
src/: components.yaml  config.py  controllers.py  development_engine.py  main.py  modelSchemas.py  models.py  security.yaml  swagger.yaml  swagger.yml  test_engine.py  views.py
src/auth/: auth.yaml  controllers.py  utils.py
src/core/: __init__.py  controllers.py  core.components.yaml  core.parameters.yaml  core.paths.yaml  core.schemas.yaml  core.yaml  models.py  schemas.py  urls.py
src/core_views/: views.py
src/core_views/templates/: base.html  customer.html  customer_created.html  customers.html  film.html  film_created.html  films.html  filmsession.html  filmsession_created.html  filmsessions.html  index.html  orders.html
src/templates/: customer.html  customer_created.html  customers.html  film.html  films.html  filmsession.html  filmsessions.html  index.html  order.html  orders.html
