[tool.poetry]
name = "cinema"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<4.0"
flask = "^3.1.0"
connexion = {extras = ["flask"], version = "^3.2.0"}
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
marshmallow = "^3.26.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
