[project.urls]
Repository = "https://github.com/misoversitty/cinema.git"

[tool.poetry]
name = "cinema"
version = "0.1.0"
description = ""
authors = ["Ilya Smirennikov <smirennikov.i@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<4.0"
flask = "^3.1.0"
connexion = {extras = ["flask"], version = "^3.2.0"}
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
marshmallow = "^3.26.0"
uvicorn = "^0.34.0"
swagger-ui-bundle = "^1.1.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
